--- a/style.css
+++ b/style.css
@@ -260,13 +260,15 @@ th {
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
+
+/* Setting the font for most of the site here */
 body,
 button,
 input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
@@ -550,12 +552,13 @@ a:active {
 .main-navigation li {
 	float: left;
 	font-size: 1.2em;
-	padding: 0.5em 0.5em;
+	padding: 0.5em 0.8em;
 	position: relative;
 }
 
 .main-navigation a {
 	display: block;
+	letter-spacing: 0.4px;
 	text-decoration: none;
 }
 
