--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -73,6 +73,8 @@ html[xmlns] .flexslider .slides {
  * DEFAULT THEME
  * ====================================================================================================================*/
 .flexslider {
+  height: 70%;
+  width: 70%;
   margin: 0 0 60px;
   background: #fff;
   border: 4px solid #fff;
@@ -90,7 +92,9 @@ html[xmlns] .flexslider .slides {
   zoom: 1;
 }
 .flexslider .slides img {
-  height: auto;
+  /* this makes the images in the slider fill their containing element */
+  height: 100%;
+  width: 100%;
   -moz-user-select: none;
 }
 .flex-viewport {
@@ -262,6 +266,23 @@ html[xmlns] .flexslider .slides {
   opacity: 1;
   cursor: default;
 }
+.flex-caption {
+  width: 100%;
+  padding: 2%;
+  left: 0;
+  bottom: 0;
+  background: rgba(0,0,0,.5);
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.3);
+  font-size: 14px;
+  line-height: 18px;
+}
+.slider {
+  /* this restricts the width of the slider */
+  max-width: 90%;
+  margin: 0 auto;
+}
+
 /* ====================================================================================================================
  * RESPONSIVE
  * ====================================================================================================================*/
@@ -273,5 +294,9 @@ html[xmlns] .flexslider .slides {
   .flex-direction-nav .flex-next {
     opacity: 1;
     right: 10px;
+  }
+  .flexslider {
+    height: 100%;
+    width: 100%;
   }
 }
